geonode/static/geonode/css/base.css
/* ... */
ul.nav-pills.filter form label {
  font-size: 11px;
  font-weight: bold;
}
ul.nav-pills.filter form select {
  font-size: 11px;
  height: 20px;
  width: 90px;
}
/** pagination **/
.pages {
  font-weight: bold;
  font-size: 11px;
  text-align: right;
  clear: left;
}
.comments header .pages {
  position: absolute;
  top: 0;
  right: 0;
}
.pages span {
  padding-right: 7px;
}
.pages .pager {
  display: inline;
  border-left: 1px solid #cccccc;
  padding-left: 3px;
}
.pager a,
.pager span {
  padding: 0 !important;
  border: 0 !important;
  display: inline-block;
  width: 15px;
  height: 15px;
  text-indent: -9999px;
}
.pages .prev {
  background: url(../../theme/img/arrows_gr_sm.png) no-repeat 0 0;
}
.pages .next {
  background: url(../../theme/img/arrows_gr_sm.png) no-repeat -11px 0;
}
.pages a.prev:hover {
  background: url(../../theme/img/arrows_gr_sm.png) no-repeat 0 -15px;
}
.pages a.next:hover {
  background: url(../../theme/img/arrows_gr_sm.png) no-repeat -11px -15px;
}
.loadmore.loading a {
  text-decoration: none;
}
.loadmore.loading a:before {
  content: "[Loading...] ";
  color: #cccccc;
  text-decoration: none;
}
ul.space li {
  margin-bottom: 5px;
}
/** view by **/
.viewby {
  font-size: 10px;
  line-height: 14px;
}
.viewby a {
  color: #777777;
  padding-left: 8px;
}
.viewby i {
  font-size: 18px;
}
.viewby a.active {
  color: #f05a24;
}
/** slide nav pane (layers & maps) **/
#contain-slider {
  overflow: hidden;
}
#contain-slider .tab-content {
  margin-left: 40px;
  width: auto;
  padding-bottom: 40px;
}
#slide-pane {
  border-right: 1px solid #cccccc;
  padding-right: 10px;
  position: relative;
  margin-left: 0;
}
#slide-pane h2 {
  font-size: 14px;
  color: #FFF;
  background-color: #484748;
  padding: 0 8px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  margin-top: 10px;
  text-transform: uppercase;
  font-family: 'Lato', sans-serif;
  font-weight: 400;
}
#slide-pane .nav li {
  border-bottom: 1px solid #cccccc;
  line-height: 1.3;
}
#slide-pane .nav a {
  padding: 0.8em;
  color: #484748;
  font-size: 16px;
}
#slide-pane .nav a.active {
  color: #f05a24;
}
#slide-pane a.toggle {
  text-decoration: none;
}
#slide-pane a.toggle-pane {
  display: block;
  font-size: 20px;
  text-align: center;
  position: absolute;
  right: 0;
  top: 10px;
  margin-right: -30px;
  width: 20px;
  padding: 8px 4px 6px;
  border: 1px solid #cccccc;
  -webkit-border-radius: 0 3px 3px 0;
  -moz-border-radius: 0 3px 3px 0;
  border-radius: 0 3px 3px 0;
}
#slide-pane a.toggle-nav {
  display: block;
  color: #eff0ef;
}
#slide-pane a.toggle-nav i {
  padding-right: 8px;
}
#nav-keywords ul.nav {
  list-style: none;
  margin: 0;
}
#nav-keywords ul.nav li {
  margin-bottom: 8px;
  border: 0;
}
#nav-keywords ul.nav a {
  display: inline;
  padding: 3px 5px;
  font-size: 12px;
  background-color: #a7e4ee;
  color: #777777;
  text-transform: lowercase;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}
#nav-keywords ul.nav .count {
  color: #777777;
  padding-left: 8px;
  font-size: 11px;
}
.tabs-left .nav-tabs {
  float: none !important;
  border-right: 0 !important;
}
.tabs-left .nav-tabs a {
  font-size: 17px;
  font-weight: bold;
  padding: 20px 20px;
  color: #222222;
  background: #efefee;
  /* Old browsers */

  background: -moz-linear-gradient(top, #efefee 0%, #fbfbfb 100%);
  /* FF3.6+ */

  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #efefee), color-stop(100%, #fbfbfb));
  /* Chrome,Safari4+ */

  background: -webkit-linear-gradient(top, #efefee 0%, #fbfbfb 100%);
  /* Chrome10+,Safari5.1+ */

  background: -o-linear-gradient(top, #efefee 0%, #fbfbfb 100%);
  /* Opera 11.10+ */

  background: -ms-linear-gradient(top, #efefee 0%, #fbfbfb 100%);
  /* IE10+ */

  background: linear-gradient(top, #efefee 0%, #fbfbfb 100%);
  /* W3C */

  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#efefee', endColorstr='#fbfbfb', GradientType=0);
  /* IE6-9 */

  margin-bottom: 0 !important;
  -webkit-border-radius: 0 !important;
  -moz-border-radius: 0 !important;
  border-radius: 0 !important;
  border: 0;
  font-family: 'Lato', sans-serif;
  font-weight: 700;
}
.tabs-left > .nav-tabs .active > a,
.tabs-left > .nav-tabs .active > a:hover,
.tabs-left .nav-tabs a:hover {
  border: 0;
  background: #c8cbca;
  /* Old browsers */

  background: -moz-linear-gradient(top, #c8cbca 0%, #dadddc 100%);
  /* FF3.6+ */

  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #c8cbca), color-stop(100%, #dadddc));
  /* Chrome,Safari4+ */

  background: -webkit-linear-gradient(top, #c8cbca 0%, #dadddc 100%);
  /* Chrome10+,Safari5.1+ */

  background: -o-linear-gradient(top, #c8cbca 0%, #dadddc 100%);
  /* Opera 11.10+ */

  background: -ms-linear-gradient(top, #c8cbca 0%, #dadddc 100%);
  /* IE10+ */

  background: linear-gradient(top, #c8cbca 0%, #dadddc 100%);
  /* W3C */

  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#c8cbca', endColorstr='#dadddc', GradientType=0);
  /* IE6-9 */

  color: #222222;
}
.tab-pane article {
  margin-bottom: 40px;
}
.tab-pane article img {
  margin-bottom: 10px;
}
/** map viewer **/
#paneltbar {
  margin-top: 60px;
}
/** map & layer actions **/
.map-actions,
.layer-actions {
  margin: 8px 0 20px;
}
.map-actions a,
.layer-actions a {
  font-size: 14px;
  padding-right: 20px;
  color: #ff4600;
}
.map-actions a [class^="icon-"],
.layer-actions a [class^="icon-"],
.map-actions a [class*=" icon-"],
.layer-actions a [class*=" icon-"] {
  margin: 2px 1px 0 0;
}
.map-actions .avg_rating,
.layer-actions .avg_rating {
  float: right;
  margin-top: 8px;
  color: #777777;
}
.map-actions .avg_rating .overall_rating,
.layer-actions .avg_rating .overall_rating {
  font-size: 18px;
  padding-left: 6px;
  color: #f05a24;
}
article.abstract {
  border-top: 1px solid #cccccc;
  border-bottom: 1px solid #cccccc;
  padding: 15px 0;
  margin-bottom: 15px;
}
/* ... */

